; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_atrac3plus.c_decode_channel_code_tab.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_atrac3plus.c_decode_channel_code_tab.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@CODING_DIRECT = common dso_local global i32 0, align 4
@ct_vlc_tabs = common dso_local global i32* null, align 8
@CODING_VLC = common dso_local global i32 0, align 4
@CODING_VLC_DELTA = common dso_local global i32 0, align 4
@CODING_VLC_DIFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_4__*, i32, i32*)* @decode_channel_code_tab to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decode_channel_code_tab(i32* %0, %struct.TYPE_4__* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca %struct.TYPE_5__*, align 8
  %17 = alloca %struct.TYPE_5__*, align 8
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = icmp ne i32 %20, 0
  %22 = zext i1 %21 to i64
  %23 = select i1 %21, i32 7, i32 3
  store i32 %23, i32* %13, align 4
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 1
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %25, align 8
  %27 = load i32, i32* %7, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i64 %28
  store %struct.TYPE_5__* %29, %struct.TYPE_5__** %16, align 8
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 1
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i64 0
  store %struct.TYPE_5__* %33, %struct.TYPE_5__** %17, align 8
  %34 = load i32*, i32** %5, align 8
  %35 = call i32 @get_bits1(i32* %34)
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 0
  store i32 %35, i32* %37, align 4
  %38 = load i32*, i32** %5, align 8
  %39 = call i32 @get_bits(i32* %38, i32 2)
  switch i32 %39, label %95 [
    i32 0, label %40
    i32 1, label %47
    i32 2, label %61
    i32 3, label %77
  ]

40:                                               ; preds = %4
  %41 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = add nsw i32 %43, 2
  store i32 %44, i32* %11, align 4
  %45 = load i32, i32* @CODING_DIRECT, align 4
  %46 = call i32 @DEC_CT_IDX_COMMON(i32 %45)
  br label %95

47:                                               ; preds = %4
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 8
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %52, label %55

52:                                               ; preds = %47
  %53 = load i32*, i32** @ct_vlc_tabs, align 8
  %54 = getelementptr inbounds i32, i32* %53, i64 1
  br label %57

55:                                               ; preds = %47
  %56 = load i32*, i32** @ct_vlc_tabs, align 8
  br label %57

57:                                               ; preds = %55, %52
  %58 = phi i32* [ %54, %52 ], [ %56, %55 ]
  store i32* %58, i32** %14, align 8
  %59 = load i32, i32* @CODING_VLC, align 4
  %60 = call i32 @DEC_CT_IDX_COMMON(i32 %59)
  br label %95

61:                                               ; preds = %4
  %62 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %63 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %62, i32 0, i32 0
  %64 = load i32, i32* %63, align 8
  %65 = icmp ne i32 %64, 0
  br i1 %65, label %66, label %71

66:                                               ; preds = %61
  %67 = load i32*, i32** @ct_vlc_tabs, align 8
  %68 = getelementptr inbounds i32, i32* %67, i64 1
  store i32* %68, i32** %14, align 8
  %69 = load i32*, i32** @ct_vlc_tabs, align 8
  %70 = getelementptr inbounds i32, i32* %69, i64 2
  store i32* %70, i32** %15, align 8
  br label %74

71:                                               ; preds = %61
  %72 = load i32*, i32** @ct_vlc_tabs, align 8
  store i32* %72, i32** %14, align 8
  %73 = load i32*, i32** @ct_vlc_tabs, align 8
  store i32* %73, i32** %15, align 8
  br label %74

74:                                               ; preds = %71, %66
  store i32 0, i32* %12, align 4
  %75 = load i32, i32* @CODING_VLC_DELTA, align 4
  %76 = call i32 @DEC_CT_IDX_COMMON(i32 %75)
  br label %95

77:                                               ; preds = %4
  %78 = load i32, i32* %7, align 4
  %79 = icmp ne i32 %78, 0
  br i1 %79, label %80, label %94

80:                                               ; preds = %77
  %81 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %82 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %81, i32 0, i32 0
  %83 = load i32, i32* %82, align 8
  %84 = icmp ne i32 %83, 0
  br i1 %84, label %85, label %88

85:                                               ; preds = %80
  %86 = load i32*, i32** @ct_vlc_tabs, align 8
  %87 = getelementptr inbounds i32, i32* %86, i64 3
  br label %90

88:                                               ; preds = %80
  %89 = load i32*, i32** @ct_vlc_tabs, align 8
  br label %90

90:                                               ; preds = %88, %85
  %91 = phi i32* [ %87, %85 ], [ %89, %88 ]
  store i32* %91, i32** %14, align 8
  %92 = load i32, i32* @CODING_VLC_DIFF, align 4
  %93 = call i32 @DEC_CT_IDX_COMMON(i32 %92)
  br label %94

94:                                               ; preds = %90, %77
  br label %95

95:                                               ; preds = %4, %94, %74, %57, %40
  ret i32 0
}

declare dso_local i32 @get_bits1(i32*) #1

declare dso_local i32 @get_bits(i32*, i32) #1

declare dso_local i32 @DEC_CT_IDX_COMMON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
